# proj2md

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  clipboard.rs  config.rs  content.rs  errors.rs  inventory.rs  lib.rs  main.rs  markdown.rs  output.rs  paths.rs  test_support.rs
src/app/: tests.rs
src/cli/: tests.rs
src/clipboard/: win32.rs  windows.rs
src/clipboard/windows/: tests.rs
src/content/: tests.rs
src/inventory/: tests.rs
src/markdown/: tests.rs
src/output/: tests.rs
src/paths/: tests.rs
