[package]
name = "doc_gen"
version = "0.0.0"
edition = "2024"

[dependencies]
walkdir = "*"
encoding_rs = "*"
encoding_rs_io = "*"
dialoguer = "*"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
keyword_idents = { level = "warn", priority = -1 }
unsafe_code = "warn"
unused_must_use = "warn"
unused_macros = "warn"
explicit_outlives_requirements = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
unused_qualifications = "warn"
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "warn"
unreachable_pub = "warn"
bare_trait_objects = "warn"

missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
panic = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
float_arithmetic = "warn"
float_cmp_const = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
as_conversions = "warn"
wildcard_enum_match_arm = "warn"
exit = "warn"

implicit_return = "allow"
wildcard_dependencies = "allow"
single_call_fn = "allow"
arbitrary_source_item_ordering = "allow"
missing_docs_in_private_items = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
non_ascii_literal = "allow"
else_if_without_else = "allow"
print_stdout = "allow"
print_stderr = "allow"
absolute_paths = "allow"
multiple_crate_versions = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
separated_literal_suffix = "allow"
self_named_module_files = "allow"
field_scoped_visibility_modifiers = "allow"
redundant_pub_crate = "allow"
semicolon_outside_block = "allow"
