[package]
name = "proj2md"
version = "0.0.0"
edition = "2024"

[dependencies]
chardetng = "*"
encoding_rs = "*"
ignore = "*"
mimalloc = { version = "*", features = ["v3"] }

[profile.dev]
debug = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
keyword-idents = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
rust-2024-compatibility = "warn"

missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
else_if_without_else = "allow"
exhaustive_structs = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
non_ascii_literal = "allow"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_pub_crate = "allow"
separated_literal_suffix = "allow"
self_named_module_files = "allow"
semicolon_outside_block = "allow"
similar_names = "allow"
single_call_fn = "allow"
too-many-arguments = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "allow"
wildcard_dependencies = "allow"
